Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

27-Feb-2012 Jean-Marie Simonet
 # [#28133] JMail addAttachment ignores parameters (filename, encoding, type).Thanks Holger.

24-Feb-2012 Christophe Demko
 # [#28118] Notice 'Only variable references should be returned by reference' (Piotr Konieczny)
 # [#28115] *PHP 5.3.8 Notice for some language packs with iconv
 # [#28122] Fix installation for Joomla 3.0 (Rouven Weßling)
 # [#28023] Backport JSession::checkToken() from the platform (Rouven Weßling)

22-Feb-2012 Christophe Demko
 # [#28008] sql syntax error in libraries/joomla/database/table/session.php:137 (Daniel Cheng)

21-Feb-2012 Jean-Marie Simonet
 # [#28099] Editor buttons in Custom HTML module
 # [#28088] Strict error with JSite::getMenu()
 # [#28098] Entering link to article via Article button -making it Multilanguage aware
 
20-Feb-2012 Jean-Marie Simonet
 $ Updating ko-KR installation ini file
 $ [#28090] Changes to the Administrator Language Strings (mostly English). Thanks Mig
 
19-Feb-2012 Jean-Marie Simonet
 [#28091] Move the check if multilang is enabled to the libraries. Thanks Rouven
 [#28068] Module weblinks does not import needed JModel class. Thanks Pepe.
 [#28075] Recaptcha image doesnt show up, maybe because of https secure website. Thanks Viet.
 
17-Feb-2012 Jean-Marie Simonet
 # [#28072] *Content Languages ordering broken

16-Feb-2012 Christophe Demko
 # [#27931] Profile fields not available in edit, only registration
 # [#28036] *Implementing Access levels for Content Languages (Jean-Marie Simonet)

14-Feb-2012 Jean-Marie Simonet
 # [#28044] Plugin Loadmodule ignores selected style. Thanks Nikolai
 
13-Feb-2012 Christophe Demko
 # [#28017] JModuleHelper All but selected does not work correctly when there is no itemid (Elin Waring)